--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@ngrx/effects": "^13.2.0",
+    "@ngrx/router-store": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "bootstrap": "^3.3.7",
     "rxjs": "~7.4.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
+    "@ngrx/store-devtools": "^13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
